--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,9 @@
 /WpfApp2/obj
 /HjmosControl/bin/Debug
 /HjmosControl/obj/Debug
+/WpfApp2/bin/Debug/netcoreapp3.1/WpfApp2.deps.json
+/WpfApp2/bin/Debug/netcoreapp3.1/WpfApp2.dll
+/WpfApp2/bin/Debug/netcoreapp3.1/WpfApp2.exe
+/WpfApp2/bin/Debug/netcoreapp3.1/WpfApp2.pdb
+/WpfApp2/bin/Debug/netcoreapp3.1/WpfApp2.runtimeconfig.dev.json
+/WpfApp2/bin/Debug/netcoreapp3.1/WpfApp2.runtimeconfig.json
