--- a/src/HjmosControl/Hjmos.BaseControls.csproj
+++ b/src/HjmosControl/Hjmos.BaseControls.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BE79252B-7C0C-43A2-87A7-74901FB739EF}</ProjectGuid>
     <OutputType>library</OutputType>
-    <RootNamespace>HjmosControl</RootNamespace>
-    <AssemblyName>HjmosControl</AssemblyName>
+    <RootNamespace>Hjmos.BaseControls</RootNamespace>
+    <AssemblyName>Hjmos.BaseControls</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
