--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@
 /src/Hjmos.CommonControls/obj/Debug/Controls/CCTVControl.baml
 /src/Hjmos.CommonControls/obj/Debug/Controls/CCTVControl.g.i.cs
 /src/Hjmos.CommonControls/obj/Debug/Controls/CCTVControl.g.cs
+/src/Hjmos.BaseControls/obj/Debug/Hjmos.BaseControls.csprojAssemblyReference.cache
