RadioButon控件和ButtonGroup控件制作

--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,61 @@
 /src/Hjmos.CommonControls/obj
 /src/Hjmos.BaseControls/bin
 /src/Hjmos.BaseControls/obj
+/src/LiveCharts.WPF/obj/Debug/TooltipWithYAndPer.g.i.cs
+/src/LiveCharts.WPF/obj/Debug/TooltipWithYAndPer.g.cs
+/src/LiveCharts.WPF/obj/Debug/TooltipWithYAndPer.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Weight/normal.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Weight/light.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Weight/bold.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Size/s.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Size/m.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Size/l.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Colors/white.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Colors/metro.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Colors/material.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Colors/blue.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/Colors/black.baml
+/src/LiveCharts.WPF/obj/Debug/Themes/base.baml
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.Wpf_MarkupCompile.lref
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.Wpf_MarkupCompile.cache
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.Wpf.Properties.Resources.resources
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.Wpf.pdb
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.Wpf.g.resources
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.Wpf.dll
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.WPF.csprojAssemblyReference.cache
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.WPF.csproj.GenerateResource.cache
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.WPF.csproj.FileListAbsolute.txt
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.WPF.csproj.CoreCompileInputs.cache
+/src/LiveCharts.WPF/obj/Debug/LiveCharts.WPF.csproj.CopyComplete
+/src/LiveCharts.WPF/obj/Debug/HeatColorRange.g.i.cs
+/src/LiveCharts.WPF/obj/Debug/HeatColorRange.g.cs
+/src/LiveCharts.WPF/obj/Debug/HeatColorRange.baml
+/src/LiveCharts.WPF/obj/Debug/GeneratedInternalTypeHelper.g.i.cs
+/src/LiveCharts.WPF/obj/Debug/GeneratedInternalTypeHelper.g.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultTooltipNoPer.g.i.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultTooltipNoPer.g.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultTooltipNoPer.baml
+/src/LiveCharts.WPF/obj/Debug/DefaultTooltip.g.i.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultTooltip.g.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultTooltip.baml
+/src/LiveCharts.WPF/obj/Debug/DefaultLegend.g.i.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultLegend.g.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultLegend.baml
+/src/LiveCharts.WPF/obj/Debug/DefaultGeoMapTooltip.g.i.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultGeoMapTooltip.g.cs
+/src/LiveCharts.WPF/obj/Debug/DefaultGeoMapTooltip.baml
+/src/LiveCharts.WPF/obj/Debug/.NETFramework,Version=v4.0.AssemblyAttributes.cs
+/src/LiveCharts.WPF/bin/Debug/LiveCharts.Wpf.XML
+/src/LiveCharts.WPF/bin/Debug/LiveCharts.Wpf.pdb
+/src/LiveCharts.WPF/bin/Debug/LiveCharts.Wpf.dll
+/src/LiveCharts.WPF/bin/Debug/LiveCharts.pdb
+/src/LiveCharts.WPF/bin/Debug/LiveCharts.dll
+/src/LiveCharts/obj/Debug/LiveCharts.pdb
+/src/LiveCharts/obj/Debug/LiveCharts.dll
+/src/LiveCharts/obj/Debug/LiveCharts.csprojAssemblyReference.cache
+/src/LiveCharts/obj/Debug/LiveCharts.csproj.FileListAbsolute.txt
+/src/LiveCharts/obj/Debug/LiveCharts.csproj.CoreCompileInputs.cache
+/src/LiveCharts/obj/Debug/.NETFramework,Version=v4.0.AssemblyAttributes.cs
+/src/LiveCharts/bin/Debug/LiveCharts.xml
+/src/LiveCharts/bin/Debug/LiveCharts.pdb
+/src/LiveCharts/bin/Debug/LiveCharts.dll
