--- a/Tests/Controltest/Controltest.csproj
+++ b/Tests/Controltest/Controltest.csproj
@@ -131,6 +131,18 @@
       <Project>{be79252b-7c0c-43a2-87a7-74901fb739ef}</Project>
       <Name>Hjmos.BaseControls</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\src\Hjmos.CustomCharts\Hjmos.CustomCharts.csproj">
+      <Project>{7f06fe95-db32-4df0-b1bc-4d83451516bb}</Project>
+      <Name>Hjmos.CustomCharts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\LiveCharts.WPF\LiveCharts.WPF.csproj">
+      <Project>{36942b3b-124c-4f21-bd10-69579e88dd21}</Project>
+      <Name>LiveCharts.WPF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\LiveCharts\LiveCharts.csproj">
+      <Project>{81203923-1260-4074-9666-535159155604}</Project>
+      <Name>LiveCharts</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="CefSharp.Wpf">
