--- a/src/Hjmos.CommonControls/Hjmos.CommonControls.csproj
+++ b/src/Hjmos.CommonControls/Hjmos.CommonControls.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Common\CCTVPlayState.cs" />
     <Compile Include="Common\CCTVPlayStateSelector.cs" />
+    <Compile Include="Controls\TrainCongestionStatus.cs" />
     <Compile Include="Controls\UserControl\CCTVControl.xaml.cs">
       <DependentUpon>CCTVControl.xaml</DependentUpon>
     </Compile>
@@ -69,6 +70,8 @@
       <DependentUpon>Unity3DControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\CCTVPlayerConvert.cs" />
+    <Compile Include="Data\Enum\ConfestionStatus.cs" />
+    <Compile Include="Data\TrainCongestionData.cs" />
     <Compile Include="Models\Camera.cs" />
     <Compile Include="Models\H5SendMsgModel.cs" />
     <Compile Include="Models\VideoMonitor.cs" />
@@ -85,6 +88,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Converters\Confestion2SourceConverter.cs" />
+    <Compile Include="Tools\Extension\ObservableExtension.cs" />
+    <Compile Include="Tools\ImageSource.cs" />
     <Compile Include="Tools\WinApiHelper.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -116,9 +122,25 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Resources\Generic.xaml">
+    <Page Include="Themes\Basic\Basic.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Basic\Converters.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Themes\Basic\Brushes.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Themes\Styles\Style.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\Styles\TrainCongestionStatus.xaml">
       <SubType>Designer</SubType>
@@ -151,11 +173,15 @@
       <Version>3.1.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Themes\Basic\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Resources\Image\NoneCCTV.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Image\一般.svg" />
+    <Resource Include="Resources\Image\列车.svg" />
+    <Resource Include="Resources\Image\宽松.svg" />
+    <Resource Include="Resources\Image\拥挤.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
